# biblioLP24

./: CMakeLists.txt  emprestimos.csv  gera_relatorios.c  gera_relatorios.h  gestao_emprestimos.c  gestao_emprestimos.h  gestao_livros.c  gestao_livros.h  interface.c  interface.h  io_dados.c  io_dados.h  livros.csv  main.c  principal.c  principal.h  proncipal.c  proncipal.h  teste_adicionar_livros.c  teste_empresta_livro.c  teste_integracao.c  teste_iremover_livro.c  teste_unidade_emprestimos.c  teste_unidade_livros.c  testes_integracao.c  testes_unitarios.c
testes/: teste_gestao_livros.c
